syntax = "proto3";

import "proto/bazel_config.proto";
import "proto/execution_stats.proto";
import "proto/grp.proto";
import "proto/invocation.proto";
import "proto/user.proto";

package buildbuddy.service;

service BuildBuddyService {
  // Invocation API
  rpc GetInvocation(invocation.GetInvocationRequest)
      returns (invocation.GetInvocationResponse);
  rpc SearchInvocation(invocation.SearchInvocationRequest)
      returns (invocation.SearchInvocationResponse);
  rpc GetInvocationStat(invocation.GetInvocationStatRequest)
      returns (invocation.GetInvocationStatResponse);
  rpc UpdateInvocation(invocation.UpdateInvocationRequest)
        returns (invocation.UpdateInvocationResponse);

  // Bazel Config API
  rpc GetBazelConfig(bazel_config.GetBazelConfigRequest)
      returns (bazel_config.GetBazelConfigResponse);

  // User API
  rpc CreateUser(user.CreateUserRequest) returns (user.CreateUserResponse);
  rpc GetUser(user.GetUserRequest) returns (user.GetUserResponse);

  // Groups API
  rpc GetGroup(grp.GetGroupRequest) returns (grp.GetGroupResponse);
  rpc GetGroupUsers(grp.GetGroupUsersRequest) returns (grp.GetGroupUsersResponse);
  rpc UpdateGroupUsers(grp.UpdateGroupUsersRequest) returns (grp.UpdateGroupUsersResponse);
  rpc JoinGroup(grp.JoinGroupRequest) returns (grp.JoinGroupResponse);
  rpc CreateGroup(grp.CreateGroupRequest) returns (grp.CreateGroupResponse);
  rpc UpdateGroup(grp.UpdateGroupRequest) returns (grp.UpdateGroupResponse);

  // Execution API
  rpc GetExecution(execution_stats.GetExecutionRequest)
      returns (execution_stats.GetExecutionResponse);
}
